feat: Added listAvailableSlots endpoint - without filtering the booked ones
