# app/Http/Resources/SlotResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class SlotResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'doctor_id' => $this->doctorId,
+            'starts_at' => $this->startsAt,
+            'ends_at'   => $this->endsAt,
+            'duration'  => $this->duration,
+        ];
+    }
+}
